2008-03-08  Jürg Billeter  <j@bitron.ch>

	* vala/parser.y, vala/scanner.l: support declaration of local
	  multi-dimensional array variables

2008-03-08  Jürg Billeter  <j@bitron.ch>

	* vapigen/valagidlparser.vala: improve instance delegate detection

	* vapi/atk.vapi, vapi/gdk-2.0.vapi, vapi/gdk-pixbuf-2.0.vapi,
	  vapi/gnet-2.0.vapi, vapi/gnome-vfs-2.0.vapi,
	  vapi/gstreamer-0.10.vapi, vapi/gstreamer-audio-0.10.vapi,
	  vapi/gstreamer-base-0.10.vapi, vapi/gtk+-2.0.vapi,
	  vapi/libgnomeui-2.0.vapi, vapi/liboobs-1.vapi,
	  vapi/libsoup-2.2.vapi, vapi/libsoup-2.4.vapi, vapi/libwnck-1.0.vapi,
	  vapi/pango.vapi, vapi/pangocairo.vapi:regenerated

2008-03-06  Jürg Billeter  <j@bitron.ch>

	* vala/valainterfacewriter.vala: tiny code improvement

2008-03-06  Jürg Billeter  <j@bitron.ch>

	* vapi/Makefile.am, vapi/libftdi.deps, vapi/libftdi.vapi:
	  add libftdi bindings, patch by Evan Nemerson

2008-03-05  Jürg Billeter  <j@bitron.ch>

	* vala/valaclasstype.vala, vala/valadatatype.vala,
	  vala/valainterfacetype.vala, vala/valainvalidtype.vala,
	  vala/valatypeparametertype.vala, vala/valavaluetype.vala,
	  vala/valavoidtype.vala, gobject/valaccodegenerator.vala,
	  gobject/valaccodegeneratorinvocationexpression.vala,
	  gobject/valaccodegeneratormemberaccess.vala,
	  gobject/valadbusbindingprovider.vala:

	  Mark DataType as abstract base class

2008-03-04  Jürg Billeter  <j@bitron.ch>

	* vala/Makefile.am, vala/valasemanticanalyzer.vala,
	  vala/valasymbolresolver.vala, vala/valatypeparametertype.vala:
	  reduce use of raw DataType instances

2008-03-04  Jürg Billeter  <j@bitron.ch>

	* vapi/sqlite3.vapi: fix sqlite3_value binding,
	  patch by Andreas Brauchli

2008-03-04  Jürg Billeter  <j@bitron.ch>

	* compiler/valacompiler.vala: don't use GRegex to avoid
	  dependency on GLib 2.14

2008-03-04  Jürg Billeter  <j@bitron.ch>

	* vala/valacodecontext.vala: fix duplicate local variable,
	  patch by Vlad Grecescu

2008-03-04  Jürg Billeter  <j@bitron.ch>
